--- a/nst_digital/LANDINGV1/styles/index.css
+++ b/nst_digital/LANDINGV1/styles/index.css
@@ -3,6 +3,10 @@
     padding: 0;
 }
 
+/*
+ ______________________ Section  _________________________
+*/
+
 .banner {
     background-color: blue;
     height: 80vh;
@@ -56,6 +60,10 @@
     color: white;
 }
 
+/*
+ ______________________ Section  _________________________
+*/
+
 .main {
     display: flex;
     flex-direction: column;
@@ -70,6 +78,10 @@
 .arrow {
     margin-top: 70px;
 }
+
+/*
+ ______________________ Section  _________________________
+*/
 
 .section1 {
     display: flex;
@@ -97,6 +109,7 @@
     font-size: 40px;
     margin-bottom: 8px;
 }
+
 .left p {
     color: #464646;
     line-height: 1.8;
@@ -117,5 +130,64 @@
 }
 
 .left, .right {
+    flex: 1;
+}
+
+/*
+ ______________________ Section  _________________________
+*/
+
+.section2 .text-container {
+    width: 70%;
+
+}
+
+.section2 {
+    display: flex;
+    height: 350px;
+}
+
+.section2 img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.section2 .right2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.section2 .text-container1 {
+    width: 70%;
+
+}
+
+.right2 h1 {
+    font-size: 40px;
+    margin-bottom: 8px;
+}
+
+.right2 p {
+    color: #464646;
+    line-height: 1.8;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-bottom: 16px;
+}
+
+.right2 .button {
+    display: flex;
+    align-items: center;
+    /* justify-content: center; */
+    cursor: pointer;
+    transition: 0.266s all ease-in-out;
+}
+
+.right2 img {
+    width: 150px;
+}
+
+.left2, .right2 {
     flex: 1;
 }
